<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 by Tran Le Duy
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/action_figlet"
        android:icon="@drawable/ic_text_format_black_24dp"
        android:title="@string/figlet"/>
    <item
        android:id="@+id/action_big_text"
        android:icon="@drawable/ic_format_size_black_24dp"
        android:title="@string/big_text"/>
    <item
        android:id="@+id/action_text_image"
        android:icon="@drawable/ic_texture_black_24dp"
        android:title="@string/text_image"/>
    <item
        android:id="@+id/action_emoticon"
        android:icon="@drawable/ic_insert_emoticon_black_24dp"
        android:title="@string/emoticons"/>
    <item
        android:id="@+id/action_image"
        android:icon="@drawable/ic_collections_black_24dp"
        android:title="@string/photo"/>
</menu>